fix(integration): Refine integration dependency processing

--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -13,7 +13,7 @@ export const getMetadata = () => ({
 		The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before
 		the first stable release. <a href="https://github.com/ecopages/ecopages/tree/main/examples" target="_blank">Check out the examples.</a>
 	</p>
-	<code class="p-3 my-2">
+	<code>
 		<span class="select-none">$ </span>bunx degit ecopages/ecopages/examples/starter-jsx my-ecopages
 	</code>
 </div>
