--- a/apps/docs/src/pages/docs/getting-started/installation.mdx
+++ b/apps/docs/src/pages/docs/getting-started/installation.mdx
@@ -12,7 +12,7 @@ export const getMetadata = () => ({
 
 To create a new Ecopages project, you can install the core package and desired integrations using Bun:
 
-<CodeBlock>```bash bun jsr add @ecopages/core @ecopages/kitajs @ecopages/mdx ```</CodeBlock>
+<CodeBlock>```bash bunx jsr add @ecopages/core @ecopages/kitajs @ecopages/mdx ```</CodeBlock>
 
 This example installs the core package along with the KitaJS and MDX integrations. You can add or remove integrations based on your project needs.
 
@@ -68,8 +68,8 @@ ECOPAGES_LOGGER_DEBUG=true
 
 **Configuration Precedence:**
 
-*   **Server Hostname/Port:** Command Line Flags (`--hostname`, `--port`) > Environment Variables (`ECOPAGES_HOSTNAME`, `ECOPAGES_PORT`) > Defaults (`localhost:3000`).
-*   **Canonical Base URL:** Environment Variable (`ECOPAGES_BASE_URL`) > `eco.config.ts` (`setBaseUrl`) > Default (`http://localhost:3000`).
+*   **Server Hostname/Port:** Constructor `serverOptions` > Environment Variables (`ECOPAGES_HOSTNAME`, `ECOPAGES_PORT`) > Defaults (`localhost:3000`).
+*   **Canonical Base URL:** `eco.config.ts` (`setBaseUrl`) > Environment Variable (`ECOPAGES_BASE_URL`) > Default (`http://localhost:3000`).
 
 ## Project Structure
 
@@ -106,10 +106,11 @@ Create an entry point file (e.g., `app.ts`) to initialize and run Ecopages:
 <CodeBlock>
 ```typescript
 // filepath: app.ts
-import { EcopagesApp } from '@ecopages/core';
+import { EcopagesApp } from '@ecopages/core/adapters/bun/create-app';
 import config from './eco.config.ts';
 
-await new EcopagesApp(config).run();
+const app = new EcopagesApp({ appConfig: config });
+await app.start();
 ```
 
 </CodeBlock>
