feat(docs): clarify browser-router compatibility, specifically its incompatibility with React/Preact.

--- a/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/browser-router.mdx
@@ -14,6 +14,11 @@ The `@ecopages/browser-router` package enables Single Page Application (SPA) nav
 
 This enables persistent state (like audio players or scroll positions) and native View Transitions.
 
+<div class="banner banner--alert" role="alert">
+  <p class="banner__title">Framework Compatibility</p>
+  <p>This package works with MPA-style rendering (KitaJS, Lit, vanilla JS). <strong>Not compatible with React/Preact</strong> — these frameworks manage their own virtual DOM. For React apps, use a framework-specific routing solution.</p>
+</div>
+
 ## Installation
 
 <CodeBlock>
